# specops

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-br.md  ROADMAP.md  SECURITY.md  pyproject.toml  specops.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
.specs/: lifecycle-roles.md  objective.md
.specs/reference/: fix-template.md  manage-status.py  methodology.md  reconcile-status.py  review-prompt.md  revision-template.md  scope-tasks-consistency.py  scope-template.md  status-template.yaml  tasks-template.md
specs/001-specops-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-hardening-dx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-stage-directive-wiring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-review-gates-cli/: data-model.md  future-headless-dispatch-draft.md  plan.md  quickstart.md  research.md  spec.md  status.yaml  tasks.md
specs/005-native-speckit-extension/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ledger-v2-integrity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-native-workflow-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-context-map-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-context-aware-planning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-end-to-end-traceability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-structured-corrective-handoff/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-gate-profiles-evidence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/specops/: __init__.py  cli.py  compat.py  config.py  consistency.py  contextmap.py  (+17 more)
tests/: conftest.py
(+131 files in other folders)
