[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specops-cli"
version = "0.1.0"
description = "A Spec-Driven Development (SDD) process enforcement CLI extending Speckit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Paulo Segundo", email = "paulosegundo@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "rich>=13.0.0",
]

[project.scripts]
specops = "specops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/specops"]
