[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckit-specops"
version = "0.2.0"
description = "A Spec-Driven Development (SDD) process enforcement CLI extending Speckit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Paulo Segundo", email = "paulosegundo@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
specops = "specops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/specops"]

[tool.hatch.build]
include = [
    "src/specops/**",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
check_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "git.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=specops --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
